# trackback-node

./: .gitignore  .rustfmt.toml  Dockerfile  Dockerfile.dev  Limitations.md  README.md  buildspec.yml  docker-compose.dev.yml  docker-compose.yml  makefile
.github/workflows/: check.yml  trackback-test.yml
deployment/: docker-compose.dev.yml  docker-compose.yml  docker-prom.yaml
docker/: Dockerfile  Dockerfile.dev  Dockerfile.prod  Dockerfile.test
node/: Cargo.toml  build.rs
node/chain_specs/: test-net.json
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/dids/: Cargo.toml  README.md
pallets/dids/rpc/: Cargo.toml
pallets/dids/rpc/runtime-api/: Cargo.toml
pallets/dids/rpc/runtime-api/src/: lib.rs
pallets/dids/rpc/src/: lib.rs
pallets/dids/src/: did_operations.rs  lib.rs  mock.rs  structs.rs  tests.rs  utils.rs
pallets/trackback/: Cargo.toml  HOWTO.md  README.md
pallets/trackback/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs
scripts/: test.sh
terraform/ap-southease-2/: main.tf  provider.tf
terraform/ap-southeast-2/: backend.tf  main.tf  variables.tf
terraform/ap-southeast-2/deployec2/: main.tf  variables.tf
terraform/ap-southeast-2/loadbalancer/: backend.tf  main.tf  variables.tf
terraform/modules/ec2_attachment/: cloudwatch.tf  ec2.tf  iam.tf  variables.tf
terraform/modules/ec2_docker/: ec2.tf  iam.tf  variables.tf
terraform/modules/loadbalancer_r53/: loadbalancer.tf  route53.tf  variables.tf
