[package]
name = "pallet-dids"
authors = ["Gayan Kalanamith <gayan@track-back.co>"]
edition = "2018"
version = '0.0.1'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-support = { version = '3.0', default-features = false }
frame-system = { version = '3.0', default-features = false }
sp-application-crypto = { version = '3.0', default-features = false}
sp-core = { version = '3.0', default-features = false}
sp-runtime = { version = '3.0', default-features = false }
sp-std = { version = '3.0', default-features = false }
log = { version = "0.4.14", default-features = false }
pallet-timestamp = { version = '3.0', default-features = false}
serde = {version = "1.0.130", default-features = false, features=["derive"]}

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
rstest = { version = "0.11.0" }
rand = { version = "0.8.4"}

[lib]
doctest = false

[features]
default = ['std']
std = [
    'codec/std',
	'frame-support/std',
	'frame-system/std',
	'sp-runtime/std',
	'pallet-timestamp/std',
	'log/std',
	"serde/std",
]
