[package]
name = "dids-rpc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive"] }
serde = { features = ['derive'], optional = true, version = '1.0.119'}

# local dependencies
pallet-dids = {default-features = false, path = '..'}

# Custom runrime API
dids-runtime-api = { default-features = false, path = 'runtime-api'}

# substrate dependencies
sp-api = { default-features = false, version = "3.0.0" }
sp-rpc = { default-features = false, version = "3.0.0"}
sp-runtime = { default-features = false, version = "3.0.0"}
sp-std = { default-features = false, version = "3.0.0"}

[features]
default = ['std']
std = [
    'serde',
    'sp-api/std',
    'sp-std/std',
    'sp-runtime/std',
    'pallet-dids/std'
]
